--- a/FinalApp/Base.lproj/LaunchScreen.xib
+++ b/FinalApp/Base.lproj/LaunchScreen.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,11 +11,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Sonia Nigam. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="451" width="441" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="7UQ-p9-Zoc"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                    <rect key="frame" x="103.5" y="458" width="273" height="13.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -24,7 +20,7 @@
                     <rect key="frame" x="-106" y="-204" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="721-50-lCO">
-                    <rect key="frame" x="120" y="122" width="240" height="236"/>
+                    <rect key="frame" x="120" y="-79" width="240" height="638"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="zQf-8O-RI9"/>
                     </constraints>
@@ -32,14 +28,14 @@
             </subviews>
             <color key="backgroundColor" red="0.58039215686274515" green="0.090196078431372548" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="centerX" secondItem="721-50-lCO" secondAttribute="centerX" id="7Rf-La-Y0i"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="112" id="4An-fb-air"/>
                 <constraint firstItem="721-50-lCO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="122" id="8ru-co-7UE"/>
+                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="FgU-FF-99a"/>
                 <constraint firstAttribute="trailing" secondItem="721-50-lCO" secondAttribute="trailing" constant="120" id="HSk-Aa-yqd"/>
                 <constraint firstItem="721-50-lCO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="IxK-cm-F8q"/>
                 <constraint firstItem="721-50-lCO" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MN8-9x-KPm"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="SEr-3p-1ZY"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="721-50-lCO" secondAttribute="bottom" constant="93" id="cMp-oW-dyk"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="mo2-dc-6MZ"/>
+                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="8" id="cyG-LI-QZm"/>
+                <constraint firstAttribute="trailing" secondItem="8ie-xW-0ye" secondAttribute="trailing" constant="112" id="oFL-sw-fkJ"/>
                 <constraint firstItem="721-50-lCO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="120" id="sz2-BN-fgv"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="721-50-lCO" secondAttribute="bottom" constant="81" id="tj5-IT-VvG"/>
             </constraints>
@@ -50,6 +46,8 @@
                     <exclude reference="8ru-co-7UE"/>
                     <exclude reference="HSk-Aa-yqd"/>
                     <exclude reference="sz2-BN-fgv"/>
+                    <exclude reference="4An-fb-air"/>
+                    <exclude reference="oFL-sw-fkJ"/>
                     <exclude reference="tj5-IT-VvG"/>
                 </mask>
             </variation>
